Move script and style to separated files !

--- a/index.html
+++ b/index.html
@@ -4,393 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="ressources/System/MainScript.js"></script>
+    <link rel="stylesheet" href="ressources/System/MainStyle.css">
     <link rel="stylesheet" href="Icon UI/Icons.css">
     <script src="dist/winbox.bundle.js"></script>
     <title>Selaria</title>
-    <style>
-        .bar{
-            background-color: rgba(0, 0, 0, 0.548);
-            width: 100%;
-        }
-        html, body{
-            height: 100%;
-            width: 100%;
-            padding: 0;
-            margin: 0;
-        }
-        .bar_button{
-            text-decoration: none;
-            color: rgb(255, 255, 255);
-            font-weight: thin;
-            background-color: rgba(61, 61, 61, 0);
-            border: none;
-            height: 35px;
-        }
-        .menu_button_long{
-            border-radius: 5px;
-            width: 100%;
-        }
-        .bar_button:hover{
-            text-decoration: none;
-            color: rgb(255, 255, 255);
-            background-color: rgba(148, 148, 148, 0.301);
-            height: 35px;
-            border: none;
-        }
-        body{
-            overflow-x: hidden;
-            overflow-y: hidden;
-            background-image: url("ressources/background/bgdefault.png");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
-        .bar_menu{
-            width: 100px;
-            background-color: rgba(0, 0, 0, 0.548);
-            backdrop-filter: blur(13px);
-            border-radius: 5px;
-            visibility: hidden;
-            border-radius: 3px;
-            position: fixed;
-            z-index: 951;
-
-        }
-        .O_menu_button{
-            width: 105px;
-            height: 105px;
-            border-radius: 3px;
-            background-color: rgba(0, 0, 0, 0.548);
-            border: none;
-            text-decoration: none;
-            color: rgba(255, 255, 255, 0.493);
-            font-weight: bold;
-            text-align: start;
-            color: rgb(255, 255, 255);
-        }
-        .O_menu_button:hover{
-            width: 105px;
-            height: 105px;
-            border-radius: 3px;
-            background-color: rgba(0, 0, 0, 0.548);
-            border: 5px solid rgba(0, 0, 0, 0.19);
-            text-decoration: none;
-            color: rgba(255, 255, 255, 0.493);
-            font-weight: bold;
-            text-align: start;
-        }
-        .bar_menu_right{
-            width: 100px;
-            background-color: rgba(0, 0, 0, 0.548);
-            backdrop-filter: blur(13px);
-            border-radius: 5px;
-            visibility: hidden;
-            position: fixed;
-            z-index: 951;
-            right: 0px;
-        }
-        .bar_menu_all{
-            width: 100px;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.548);
-            border-radius: 5px;
-            visibility: hidden;
-            position: fixed;
-            z-index: 3;
-            right: 0;
-        }
-        .winbox{
-            background-color: rgba(0, 0, 0, 0.548);
-            backdrop-filter: blur(13px);
-            border-radius: 9px;
-            box-shadow: none;
-        }
-        .wb-title{
-            color: rgb(255, 255, 255);
-            box-shadow: none;
-        }
-        .wb-body{
-            background-color: rgba(0, 0, 0, 0);
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        #context_menu{
-            box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.548);
-            border-radius: 5px;
-        }
-        #context_menu_O{
-            box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.548);
-            border-radius: 5px;
-        }
-        .wb-body{
-            border-radius: 9px;
-        }
-        .wb-title{
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-weight: lighter;
-        }
-        h1, h2, h3, h4, h5, h6, p, a{
-            font-style: normal;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        .winbox.min{
-            z-index: 951;
-        }
-        .winbox.max{
-            border-radius: 0;
-        }
-        .wb-max{
-            background-image: url("ressources/Winbox/MaxIcon.svg");
-            background-size: 25px;
-            z-index: 951;
-        }
-        .wb-min{
-            background-image: url("ressources/Winbox/MinIcon.svg");
-            background-size: 25px;
-            position: relative;
-            z-index: 951;
-            top: 5.9px;
-        }
-        .wb-close{
-            background-image: url("ressources/Winbox/CloseIcon.svg");
-            background-size: 25px;
-            z-index: 951;
-        }
-        .wb-full{
-            background-image: url("ressources/Winbox/FullIcon.svg");
-            background-size: 25px;
-            float: left;
-            z-index: 951;
-        }
-        #notes{
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: rgba(0, 0, 0, 0.548);
-            backdrop-filter: blur(13px);
-            border-radius: 9px;
-            visibility: hidden;
-            box-shadow: none;
-            font-size: large;
-            position: fixed;
-            color: white;
-            height: 159px;
-            border: none;
-            z-index: 951;
-            width: 315px;
-            resize: none;
-            right: 5px;
-            top: 41px;
-        }
-        #notes:focus-visible{
-            outline: none;
-        }
-        #bar_menu_apps{
-            visibility: hidden;
-            position: absolute;
-            left: 25px;
-        }
-        .desktop_button{
-            text-decoration: none;
-            color: rgb(255, 255, 255);
-            font-weight: thin;
-            background-color: rgba(61, 61, 61, 0);
-            text-align: center;
-            border: none;
-            height: 95px;
-            width: 95px;
-        }
-        .desktop_button:hover{
-            text-decoration: none;
-            color: rgb(255, 255, 255);
-            background-color: rgba(148, 148, 148, 0.301);
-            text-align: center;
-            border: none;
-            height: 95px;
-            width: 95px;
-        }
-        .desktop_button span{
-            margin-left: 50%;
-            transform: translateX(-50%);
-        }
-        #command_line{
-            background-color: rgba(0, 0, 0, 0.548);
-            backdrop-filter: blur(13px);
-            visibility: hidden;
-            position: absolute;
-            color: white;
-            height: 35px;
-            border: none;
-            z-index: 951;
-            resize: none;
-            bottom: 0px;
-            right: 5px;
-            left: 5px;
-            top: 41px;
-        }
-        #Notification{
-            background-color: rgba(0, 0, 0, 0.548);
-            backdrop-filter: blur(13px);
-            top: calc(35px + 5px);
-            border-radius: 13px;
-            visibility: hidden;
-            position: absolute;
-            color: white;
-            height: auto;
-            border: none;
-            z-index: 953;
-            resize: none;
-            width: 359px;
-            right: 5px;
-        }
-        #desktop{
-            display: table-row;
-        }
-        * {cursor: url(ressources/cursors/default.png), default}
-    </style>
-    <script>
-        function func() {
-        return ( ( ( 1+Math.random() ) * 0x10000 ) | 0 ).toString( 16 ).substring( 1 );
-        }
-        function Uuid(){
-            // For calling it, stitch '3' in the 3rd group
-            UUID = (func() + func() + "-" + func() + "-3" + func().substr(0,2) + "-" + func() + "-" + func() + func() + func()).toLowerCase();
-            return UUID;
-        }
-        function open_menu(id)
-        {
-            if(document.getElementById(id).style.visibility=="hidden")
-                {
-                    document.getElementById(id).style.visibility="visible";
-                }
-            else
-                {
-                    document.getElementById(id).style.visibility="hidden";
-                }
-            return true;
-        }
-        function open_app(path){
-            App_uuid = Uuid()
-            apps_title[App_uuid] = path
-            apps[App_uuid] = new WinBox({
-                class: ["win"],
-                border: "0.15em",
-                url: path+"?UUID="+App_uuid,
-                title: path,
-                background: localStorage.getItem('window_color'),
-                x: "center",
-                y: "center",
-                top: "35px",
-                root: document.body,
-                Uuid: App_uuid,
-                id: "App_"+App_uuid,
-            });
-        }
-        function AppToBackground(Uuid){
-            apps[Uuid].hide();
-        }
-        function AppDisableBackground(Uuid){
-            apps[Uuid].show();
-        }
-        async function load()
-        {
-            if(localStorage.getItem('localStorageVerification') == undefined){
-                document.location.href="system_page/important_error.html?error=localStorageCorrupted";
-            }else if(localStorage.getItem('Configured') != "true"){
-                document.location.href="system_page/Obbe.html";
-            }
-            apps_title = {};
-            apps = {};
-            var $_GET = [];
-            var parts = window.location.search.substr(1).split("&");
-            for (var i = 0; i < parts.length; i++){
-                var temp = parts[i].split("=");
-                $_GET[decodeURIComponent(temp[0])] = decodeURIComponent(temp[1]);
-            }
-            if(typeof $_GET["Command"]!=undefined){
-                return eval($_GET["Command"])
-            }
-            document.getElementById("notes").value = localStorage.getItem('notes');
-            var selected = "none";
-            if( navigator.userAgent.match(/iPhone/i)
-             || navigator.userAgent.match(/webOS/i)
-             || navigator.userAgent.match(/Android/i)
-             || navigator.userAgent.match(/iPad/i)
-             || navigator.userAgent.match(/iPod/i)
-             || navigator.userAgent.match(/BlackBerry/i)
-             || navigator.userAgent.match(/Windows Phone/i)
-             ){
-                 if($_GET["fromphone"]=="true"){
-                     return true;
-                 }
-                 else{
-                     document.location.href="index mobile.html";
-                 }
-            }
-            AppsList = JSON.parse(localStorage.getItem("LocalAppsList"));
-            for(Apps in AppsList){
-                Button = document.createElement("button");
-                Button.className = "bar_button";
-                Button.innerHTML = JSON.stringify(Apps).replace('"','').replace('"','');
-                Button.onclick = function(){
-                    open_app(JSON.stringify(AppsList[Apps]).replace('"','').replace('"',''));
-                }
-                Button.style.width = "100%";
-                document.getElementById("bar_menu_apps").appendChild(Button);
-            }
-        }
-        function first_startup()
-        {
-            localStorage.setItem('title', 'webOS v2.0');
-            localStorage.setItem('base_icon', 'O');
-            localStorage.setItem('window_color', 'background-color: rgba(255, 255, 255, 0.548);');
-            localStorage.setItem('taskbar_color', 'rgb(59, 59, 59)');
-            Notification.requestPermission();
-            new WinBox("premier démarrage", {
-                class: ["win"],
-                html:'<p>inititialisé</p>',
-                modal: true,
-                y:'39px',
-                background: localStorage.getItem('window_color'),
-                root: document.body,
-            });
-        }
-        function open_vm(){
-            new WinBox('Virtual Machine', {
-                class: ["win"],
-                border: "0.15em",
-                url:'index.html',
-                background: localStorage.getItem('window_color'),
-                x: "center",
-                y: "center",
-                top: "35px",
-                root: document.body
-            });
-        }
-        function apps_installer(){
-            new WinBox('Apps Installer', {
-                border: "0px",
-                url:'apps/Installer.html',
-                x: "center",
-                y: "center",
-                root: document.body,
-            });
-        }
-        function error(error){
-            document.location.href="system_page/important_error.html?error="+error;
-        }
-        function notification(title, message, command){
-            notification_to_execute = command;
-            document.getElementById("Notification").style.textAlign = "center";
-            document.getElementById("Notification_title").style.fontWeight = "bold";
-            document.getElementById("Notification_title").innerHTML = title;
-            document.getElementById("Notification").style.visibility = "visible";
-            document.getElementById("Notification_message").style.fontWeight = "normal";
-            document.getElementById("Notification_message").innerHTML = message;
-            setTimeout(function(){
-                document.getElementById("Notification").style.visibility = "hidden";
-                document.getElementById("Notification").style.textAlign = "left";
-            }, 5000);
-        }
-    </script>
     <link rel="shortcut icon" href="ressources/logo/logo.ico" type="images/x-icon" />  
 </head>
 <body onload="javascript:load();">
@@ -459,88 +77,4 @@
         </button>
     </div>
 </body>
-<script>
-    function allsecondsfunction(){
-        document.getElementById('time_base_button').innerHTML=new Date().toLocaleTimeString();
-    }
-    setInterval(allsecondsfunction, 1000);
-    document.addEventListener('contextmenu', function (e){
-        var context_menu = document.getElementById('context_menu_desktop');
-        context_menu.style.display = 'none';
-        context_menu.style.visibility = 'hidden';
-        var context_menu = document.getElementById('context_menu');
-        context_menu.style.display = 'none';
-        context_menu.style.visibility = 'hidden';
-        var context_menu = document.getElementById('context_menu_O');
-        context_menu.style.display = 'none';
-        context_menu.style.visibility = 'hidden';
-        e.preventDefault();
-        var x = e.clientX;
-        var y = e.clientY;
-        if(e.target.id == "bar_base_button_O"){
-            var context_menu = document.getElementById('context_menu_O');
-            context_menu.style.left = x + 'px';
-            context_menu.style.top = y + 'px';
-            context_menu.style.display = 'block';
-            context_menu.style.visibility = 'visible';
-            var window_width = window.innerWidth;
-            var window_height = window.innerHeight;
-            var context_menu_width = barmenu_O.offsetWidth;
-            var context_menu_height = barmenu_O.offsetHeight;
-            if(x + context_menu_width > window_width) {
-                context_menu.style.left = (x - context_menu_width) + 'px';
-            }
-            if(y + context_menu_height > window_height) {
-                context_menu.style.top = (y - context_menu_height) + 'px';
-            }
-        }
-        if(e.target.className == "desktop_button"){
-            var context_menu = document.getElementById('context_menu_desktop');
-            to_execute = e.target.getAttribute('onclick');
-            selected_element = e.target;
-            context_menu.style.left = x + 'px';
-            context_menu.style.top = y + 'px';
-            context_menu.style.display = 'block';
-            context_menu.style.visibility = 'visible';
-            var window_width = window.innerWidth;
-            var window_height = window.innerHeight;
-            var context_menu_width = barmenu_O.offsetWidth;
-            var context_menu_height = barmenu_O.offsetHeight;
-            if(x + context_menu_width > window_width) {
-                context_menu.style.left = (x - context_menu_width) + 'px';
-            }
-            if(y + context_menu_height > window_height) {
-                context_menu.style.top = (y - context_menu_height) + 'px';
-            }
-        }
-        else{
-            var context_menu = document.getElementById('context_menu');
-            context_menu.style.left = x + 'px';
-            context_menu.style.top = y + 'px';
-            context_menu.style.display = 'block';
-            context_menu.style.visibility = 'visible';
-            var window_width = window.innerWidth;
-            var window_height = window.innerHeight;
-            var context_menu_width = barmenu_O.offsetWidth;
-            var context_menu_height = barmenu_O.offsetHeight;
-            if(x + context_menu_width > window_width) {
-                context_menu.style.left = (x - context_menu_width) + 'px';
-            }
-            if(y + context_menu_height > window_height) {
-                context_menu.style.top = (y - context_menu_height) + 'px';
-            }
-        } 
-    });
-    document.addEventListener('click', function (e){
-        var context_menu = document.getElementById('context_menu_desktop');
-        context_menu.style.display = 'none';
-        context_menu.style.visibility = 'hidden';
-        var context_menu = document.getElementById('context_menu');
-        context_menu.style.display = 'none';
-        context_menu.style.visibility = 'hidden';
-        var context_menu = document.getElementById('context_menu_O');
-        context_menu.style.display = 'none';
-        context_menu.style.visibility = 'hidden';
-    });
-</script>
 </html>
