--- a/system_page/Obbe.html
+++ b/system_page/Obbe.html
@@ -29,6 +29,7 @@
             padding: 13px;
             width: 59%;
             background-color: rgba(0, 0, 0, 0.317);
+            animation: fadeInAnimation 0.5s;
             overflow: hidden;
         }
         button{
