--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <div class="bar_menu" id="bar_menu_O">
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/');">applications menu</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">execute</button>
-        <button class="bar_button menu_button_long" onclick="javascript:first_startup();">first startup</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/terminal.html');">Terminal</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/about.html');">About</button>
         <button class="bar_button menu_button_long" onclick='javascript:open_vm();'>Virtual machine</button>
@@ -58,7 +57,6 @@
     </div>
     <div class="bar_menu" id="context_menu">
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">execute</button>
-        <button class="bar_button menu_button_long" onclick="javascript:first_startup();">first startup</button>
         <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Shutdown</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/about.html');">About</button>
     </div>
@@ -89,6 +87,8 @@
         </div>
     </div>
     <div id="Screensaver" style="display: none;cursor: none;" onclick="javascript:this.style.display='none';ShowUserControl('OFF' , 'Login');">
+    </div>
+    <div id="StartupScreenEffect" style="display: none;cursor: none;">
     </div>
 </body>
 </html>
